welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: ';' expected but 'return' found.
	     } return vuBiscuit
               ^